--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  scrollbar-gutter: stable;
+}
+
 pre, code {
   @apply font-mono;
 }
@@ -9,19 +13,19 @@ pre, code {
 .token.prolog,
 .token.doctype,
 .token.cdata {
-  @apply text-stone-700;
+  @apply text-slate-700;
 }
 
 .token.maybe-class-name {
-  @apply text-stone-800 dark:text-stone-200;
+  @apply text-slate-800;
 }
 
 .token.comment {
-  @apply text-stone-500;
+  @apply text-slate-500;
 }
 
 .token.punctuation {
-  @apply text-stone-700;
+  @apply text-slate-700;
 }
 
 .token.property,
@@ -70,7 +74,7 @@ pre, code {
 
 code[class*='language-'],
 pre[class*='language-'] {
-  @apply text-stone-800;
+  @apply text-slate-800;
 }
 
 pre::-webkit-scrollbar {
@@ -78,12 +82,12 @@ pre::-webkit-scrollbar {
 }
 
 .prose :where(pre):not(:where([class~="not-prose"] *)) {
-  @apply bg-indigo-50 dark:bg-stone-700;
+  @apply bg-indigo-50;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
 
 code[class*='language-'], pre[class*='language-'],
 .token.punctuation {
-  @apply text-stone-700 dark:text-stone-50;
+  @apply text-slate-700;
 }
