--- a/app/globals.css
+++ b/app/globals.css
@@ -7,17 +7,21 @@
 }
 
 html {
-  @apply bg-gray-50;  
+  @apply bg-gray-50 dark:bg-gray-800;
 }
 
 .button {
-  @apply rounded w-40 flex items-center gap-5 px-4 py-1 border border-gray-200 hover:bg-gray-100 transform duration-150;
+  @apply rounded w-40 flex items-center gap-5 px-4 py-1 border border-gray-200 dark:border-gray-200/50 hover:bg-gray-100 dark:hover:bg-gray-100/10 transform duration-150;
 }
 
 .nav-link {
-  @apply flex-1 text-center rounded py-2 hover:bg-gray-50;
+  @apply flex-1 text-center rounded py-2 hover:bg-gray-50 dark:hover:bg-gray-50/10;
 }
 
 .nav-link[data-active="true"] {
   @apply cursor-default bg-gray-100 text-indigo-600;
+}
+
+.pill {
+  @apply rounded-full bg-gray-200 dark:bg-gray-200/10 px-2 inline-block min-w-12 text-center text-xs;
 }
