--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+@plugin "@tailwindcss/typography";
 
 :root {
   scrollbar-gutter: stable;
@@ -18,7 +17,7 @@ html {
   @apply flex-1 text-center rounded py-2 hover:bg-gray-50 dark:hover:bg-gray-50/10;
 }
 
-.nav-link[data-active="true"] {
+.nav-link[data-active='true'] {
   @apply cursor-default bg-gray-100 text-indigo-600;
 }
 
